        elm_widget_item_part_text_custom_get(),
        elm_widget_item_part_text_custom_update()

2013-09-21  Daniel Juyung Seo (SeoZ)

        * hover: added "dismissed" callback.

2013-09-21  Daniel Juyung Seo (SeoZ)

        * menu: added "dismissed" callback.

2013-09-21  Daniel Juyung Seo (SeoZ)

        * menu: added elm_menu_item_subitems_clear.

2013-09-27  ChunEon Park (Hermet)

        * layout: fixed the layout to swallow the contents again when theme is changed.

2013-09-29  ChunEon Park (Hermet)

        * mapbuf: Dont' move the content to not be calculated. Mapbuf expects
        the content is static object and it won't be updated by content
        position. This actually reduces the mapbuf calculation time muchly in
        case of complex layout.

2013-10-01  Ryuan Choi (ryuan)

        * fileselector: Add the configuration fileselector_double_tap_navigation_enable.
        It makes fileselector navigate folder using double tap instead of single tap.

2013-10-02  Ryuan Choi (ryuan)

        * fileselector: Add "activated" smart callback. It can be used to execute
        a file activated by double-clicking or pressing Enter key.

2013-10-03  ChunEon Park (Hermet)

        * Focus: update the focus highlight style when theme is changed.

2013-10-04  Carsten Haitzler (The Rasterman)

        * Break popup theme - it was poorly namespaced, unable to
        handle styles at all (so styles were broken with the given
        namespace).

2013-10-08  Daesung Kim (ad960009)

        * ctxpopup : fix elm_object_content_unset didn't unpack content from box

2013-10-10  ChunEon Park (Hermet)

        * scroller : fix the scroller to locate the current page correctly
        in case that the scroller is suddenly resized and then the drag
        couldn't capture the page location.

2013-10-12  Ryuan Choi (ryuan)

        * popup : Change the behavior about adding or removing buttons to keep the
        user defined position of button.